Rename to ml_template

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "python-template",
+  "name": "ml-template",
   "dockerFile": "Dockerfile",
   "postCreateCommand": "apt update && pipenv install --dev",
   "settings": {
