--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: pip install pipenv
       - run: pipenv install --dev
-      - run: pipenv run black --check python_template/
-      - run: pipenv run pylint python_template
+      - run: pipenv run black --check ml_template/
+      - run: pipenv run pylint ml_template
       - run: pipenv run pytest
