--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+ipykernel = "==6.7.0"
+numpy = "==1.22.1"
+pandas = "==1.4.0"
+matplotlib = "==3.5.1"
+seaborn = "==0.11.2"
+scikit-learn = "==1.0.2"
 
 [dev-packages]
 black = "==21.12b0"
