--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ pandas = "==1.4.0"
 matplotlib = "==3.5.1"
 seaborn = "==0.11.2"
 scikit-learn = "==1.0.2"
+mlflow = "==1.24.0"
 
 [dev-packages]
 black = "==21.12b0"
