--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 {
   "name": "ml-template",
   "dockerFile": "Dockerfile",
-  "postCreateCommand": "apt update && pipenv install --dev",
+  "postCreateCommand": "apt update && pipenv install --dev --system",
   "settings": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
