--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ mlflow = "==1.24.0"
 black = "==21.12b0"
 pylint = "==2.12.1"
 pytest = "==7.1.0"
+mypy = "==0.941"
 
 [requires]
 python_version = "3.10"
